--- a/images/index.html
+++ b/images/index.html
@@ -19,8 +19,29 @@
                     <li>about</li>
                 </ul>
 <div class="bar"><i class="fa-solid fa-bars"></i></div>
-           
+         
         </nav>
+
+        <!-- header-section -->
+
+        <section class="header-section">
+            <div class="header-text-center"><h3 class="header-h3">get body in <span class="shape"><i>shape</i></span>
+                & stay healthy</h3>
+                <p>a huge selection of health and fitness content, healthy recipes  and transformation stories to help you get fit and stay fit!</p>
+                <button class="button-1">join now club</button>
+                <button class="button-2">download app</button>
+            </div>
+            <div class="header-image-div">
+<img src="./Images 2.png" alt="coming-soon">
+<div class="ball-div"><div class="ball"><div class="icon-1"><i class="fa-solid fa-play"></i></div></div>
+<div class="ball-text"><h1>350+ <br> <span class="span-ball">video tutorial</span></h1></div></div>
+<div class="no-ball"><h1>500+ <br> <span class="span-ball no-span">free workout videos</span></h1></div>
+
+
+            </div>
+
+        </section>
+
 
     </header>
 
