--- a/images/index.html
+++ b/images/index.html
@@ -43,6 +43,41 @@
     </header>
   
     <!-- main-sections -->
+     <section class="habit-section">
+        <h3 class="habit-h3 margin-bottom">change your habit</h3>
+        <p  class="text-center  margin-bottom pk"> we believe fitness should be accessible to everyone,everywhere,regardless of income or <br>access to a gym.</p>
+        <div class="habit-image">
+<div class="reponsive-img">
+    <img class="border-radius" src="./image 3.png" alt="">
+    <h3 class="text-center">Movement</h3>
+    <p class="text-center pk">we believe fitness should be <br>accessible to everyone</p>
+
+</div>
+
+<div class="reponsive-img">
+    <img class="border-radius" src="./image 2.png" alt="">
+    <h3 class="text-center">Time</h3>
+    <p class="text-center pk"> we believe fitness should be<br> accessible to everyone</p>
+
+</div>
+
+<div class="reponsive-img">
+    <img class="border-radius" src="./image 4.png" alt="">
+    <h3 class="text-center">practice </h3>
+    <p class="text-center pk">we believe fitness should be<br> accessible to everyone</p>
+
+</div>
+
+<div class="reponsive-img">
+    <img class="border-radius" src="./image 5.png" alt="">
+    <h3 class="text-center">Weight loss</h3>
+    <p class="text-center pk">we believe fitness should be<br> accessible to everyone</p>
+
+</div>
+        </div>
+
+
+     </section>
 
 
 
