--- a/images/index.html
+++ b/images/index.html
@@ -27,7 +27,7 @@
         <section class="header-section">
             <div class="header-text-center"><h3 class="header-h3">get body in <span class="shape"><i>shape</i></span>
                 & stay healthy</h3>
-                <p>a huge selection of health and fitness content, healthy recipes  and transformation stories to help you get fit and stay fit!</p>
+                <p class="header-p">a huge selection of health and fitness content, healthy recipes  and transformation stories to help you get fit and stay fit!</p>
                 <button class="button-1">join now club</button>
                 <button class="button-2">download app</button>
             </div>
@@ -43,6 +43,9 @@
     </header>
   
     <!-- main-sections -->
+
+    <!-- habit section  -->
+
      <section class="habit-section">
         <h3 class="habit-h3 margin-bottom">change your habit</h3>
         <p  class="text-center  margin-bottom pk"> we believe fitness should be accessible to everyone,everywhere,regardless of income or <br>access to a gym.</p>
@@ -76,9 +79,25 @@
 </div>
         </div>
 
+     </section>
+ 
+     <!-- extra section -->
+
+     <section class="extra-section">
+        <div class="extra-div">
+            <div class="extra-text"> <h3 class="extra-h3">run an extra <br> Mile  easily </h3>
+                <p class="extra-p"> we believe fitness should be accessible to everyone, <br>everywhere,regardless of income or access to <br>a gym.With hundreds of professional workout</p>
+                <button class="button-1 button-extra"> join now</button>
+            </div>
+            <div class="extra-image">
+               <div class="img-run"></div>
+               <img class="nai" src="./run.jpg" alt="">
+              
+            </div>
+
+        </div>
 
      </section>
-
 
 
     
