--- a/images/index.html
+++ b/images/index.html
@@ -98,6 +98,61 @@
         </div>
 
      </section>
+       
+     <!-- table -  type section -->
+      <section class="section-table-type">
+
+<div class="section-text">
+    <h3 class="margin-h3">BMI calculator</h3>
+    <p class="t-text">we believe fitness should be accessible to everyone,everywhere,regardless of income or <br>  access to a gym.</p></div>
+
+    <div class="table-type-div">
+        <div class="table-div">
+    <table>
+        <h3 class="margin-1-h3">BMI calculator chart</h3>
+<tr>
+<th>BMI</th>
+<th>Weight status</th>
+</tr>
+
+<tr>
+    <td>below 18.5</td>
+    <td>underweight</td>
+</tr>
+<tr>
+    <td>18.5-24.9</td>
+    <td>Healthy</td>
+</tr>
+
+<tr>
+    <td> 25.0-29.9</td>
+<td>overweight</td>
+</tr>
+
+<tr>
+    <td>30.0- and Above</td>
+    <td>obese</td>
+</tr>
+</table></div>
+<div class="div-type">
+    <h3 class="margin-1">Calculate your BMI</h3>
+    <p class="margin-1 p-p">We believe fitness should be accessible to everyone,everywhere, <br>regardless  income or access to a gym.</p>
+    <input type="text" placeholder="Height/cm">
+    <input type="text" placeholder="weight/kg"><br>
+
+    <input type="text" placeholder="Age">
+
+    <select class="select-1"  name="" id="" >
+        <option value="">sex</option> </select>
+<select class="select-2" name="" id="">
+    <option value="">select an activity factory</option>
+</select><br>
+<button class="button-table"> calculate</button>
+</div>
+     </div>
+    </div>
+
+</section>
 
 
     
