--- a/images/index.html
+++ b/images/index.html
@@ -154,6 +154,50 @@
 
 </section>
 
+<section class="main-section-4">
+    <div class="section4-div">
+
+    <div class="trainer-img1 img1">
+        <h3 class="position">jerome bell</h3>
+        <p class="position-2">trainer</p>
+        <img class="trainer-img" src="./trainer1.png" alt="">    </div>
+
+        <div class="trainer-img1">
+            <h3 class="position">Cameron williamson</h3>
+            <p class="position-2">trainer</p>
+            <img class="trainer-img" src="./trainer2.png" alt="">
+        </div>
+
+        <div class="trainer-img1">
+            <h3 class="position">Darrel steward</h3>
+            <p class="position-2">trainer</p>
+            <img class="trainer-img" src="./trainer3.png" alt="">
+        </div>
+
+        <div class="trainer-img1">
+            <h3 class="position">dianne russell</h3>
+            <p class="position-2">trainer</p>
+            <img class="trainer-img" src="./trainer4.png" alt="">
+        </div>
+
+        <div class="trainer-img1">
+            <h3 class="position">cody Fisher</h3>
+            <p class="position-2">trainer</p>
+            <img class="trainer-img" src="./trainer5.png" alt="">
+        </div>
+
+<div class="trainer-img1">
+            <h3 class="position">theresa webb</h3>
+            <p class="position-2">trainer</p>
+            <img class="trainer-img" src="./trainer6.png" alt="">
+        </div>
+
+    </div>
+
+</section>
+
+
+
 
     
     
