--- a/images/index.html
+++ b/images/index.html
@@ -154,6 +154,9 @@
 
 </section>
 
+
+<!-- trainer-section -->
+
 <section class="main-section-4">
     <div class="section4-div">
 
@@ -196,8 +199,37 @@
 
 </section>
 
+<!-- footer-section -->
+<footer>
+<section class="section-footer">
+    <div class="footer-div-main">
+        <div class="footer-div1">
+            <h3><i>Fitness</i></h3>
+            <p>We believe fitness should be accessible to<br> everyone,everywhere,regardless of income or access to a gym .<br>
+                with hundreds of professional workout.
+            </p>
+
+        </div>
+<div class="footer-div2">
+    <h3>Get started</h3>
+    <h4>service</h4>
+    <h4>contact us</h4>
+    <h4>Affiliate program</h4>
+    <h4>About us</h4>
+</div>
+<div class="footer-div3"><h3>Get started</h3>
+<h4>Fitness</h4>
+<h4>platform</h4>
+<h4>Workout libary</h4>
+<h4>App Design</h4>
+</div>
+    </div>
+    <div class="high-footer"><h2>All right reserved @Fitness 2024</h2></div>
+
+</section>
 
 
+</footer>
 
     
     
