--- a/images/index.html
+++ b/images/index.html
@@ -155,6 +155,28 @@
 </section>
 
 
+
+<!-- my - section -->
+
+<section class="my-section">
+   
+    <div class="cricket-header"><h1 class="text-center"> if you do gym and play <br> systematic</h1>
+        <p class="p-p text-center">then your body will be healthy</p> </div>
+        <div class="my-main-div">
+            <div class="my-img-div">
+    <div class="running  "><img class="my-1" src="../istockphoto-1679800838-1024x1024.jpg" alt=""></div>
+    <div class="push-up  "><img class="my-1" src="../photo-1571019614242-c5c5dee9f50b.avif" alt=""></div>
+    <div class="cricket  "><img class="my-1" src="../photo-1593766729977-e1f01ee30e49.avif" alt=""></div></div>
+<div class="my-video">
+   <div class="video-1 "><iframe class="my-2"  width="560" height="315" src="https://www.youtube.com/embed/XXRXJhC20Yo?si=4WGJXO7d7yWnjRi5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+   <div class="video-text"> 
+    <h2 class="text-center"> please watch video</h2>
+    <p class="text-center">if you watch these two videos carefully and eat and exercise properly, you will definitely have a bod</p></div>
+   <div class="video-2  ">   <iframe class="my-2" width="560" height="315" src="https://www.youtube.com/embed/g7_HKWvhj5I?si=fqwLhsMJQ7z2B8uv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+</div>
+</div>
+</section>
+
 <!-- trainer-section -->
 
 <section class="main-section-4">
@@ -177,7 +199,7 @@
             <img class="trainer-img" src="./trainer3.png" alt="">
         </div>
 
-        <div class="trainer-img1">
+        <div class="trainer-img1 img1">
             <h3 class="position">dianne russell</h3>
             <p class="position-2">trainer</p>
             <img class="trainer-img" src="./trainer4.png" alt="">
