--- a/images/index.html
+++ b/images/index.html
@@ -247,7 +247,7 @@
 <h4>App Design</h4>
 </div>
    </div>
-    <div class="high-footer"><h2>All right reserved @Fitness 2024 sorry</h2></div>
+    <div class="high-footer"><h2>All right reserved @Fitness 2024 </h2></div>
 
 </section>
 
